accept identical fingerprint overwrite for now, added e2immu-support to default classpath